# finanalyst-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/agents/: decomposer.py  dependencies.py  grader.py  graph.py  hallucination_checker.py  rewriter.py  self_correction.py  synthesizer.py
app/core/: circuit_breaker.py  config.py  exceptions.py  logging.py  middleware.py  tracing.py
app/data/: financial_glossary.json  glossary.py
app/rag/: chunking.py  contextual.py  embeddings.py  ingestion.py  retrieval.py  vector_store.py
app/routers/: agent.py  chat.py  documents.py  health.py
app/services/: conversation.py  guard.py  indexing.py  prompts.py
app/services/llm/: __init__.py  base.py  dependencies.py  ollama_provider.py  openai_provider.py
eval/: answer_accuracy.py  dataset.jsonl  retrieval_ablation.py  run_eval.py
eval/metrics/: agentic.py  generation.py  retrieval.py
scripts/: _authored_qa.py  append_authored_qa.py  build_chunks.py  download_filings.py  embed_chunks.py  fix_chunk_ids.py  generate_eval_dataset.py  index_chunks.py  setup_qdrant.py
tests/: conftest.py  test_agent_router.py  test_agent_trace.py  test_chat.py  test_conversation.py  test_decomposer.py  test_documents.py  test_eval_metrics.py  test_grader.py  test_graph.py  test_guard.py  test_hallucination_checker.py  test_health.py  test_rag.py  test_retrieval.py  test_rewriter.py  test_self_correction.py  test_synthesizer.py
