[project]
name = "finanalyst-ai"
version = "0.1.0"
description = "Agentic AI assistant for financial analysts (SEC 10-Q / 10-K)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "openai>=1.30.0",
    "redis>=5.0.0",
    "stamina>=24.2.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "langgraph>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "qdrant-client>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.23.0",
    "ruff>=0.4.0",
]

data = [
    "sec-edgar-downloader>=5.0.0",
    "FlagEmbedding>=1.2.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
